# dokiscripts-data

./: .gitignore  Cleanup-Audio.ps1  Download-Audio.ps1  LICENSE  README.md  Transcribe-Audio.ps1  Transcribe-Folder.ps1  Transcript-Audio.ps1  Verify-Transcipt.ps1  Word-Fixer.py  channels.yaml  config-example.yaml  pyproject.toml  requirements.txt  update-all-transcripts.md  yt-dlp-archive-members.txt  yt-dlp-archive-regular.txt  yt-dlp-archive-transcript.txt  yt-dlp-archive.txt
Transcript/Dokibird/: 20201106 - Video - 【 Portal 】Up？？？ Down？？？ - [zdtlrLI9CTM].srt  20201114 - Video - 【 Little Nightmares 】Spooky time - [5GW9WOpAbdE].srt  20201220 - Video - 【 Among the Sleep #1 】I am Baby - [2kA8FYvRqnI].srt  20201228 - Video - 【 Among the Sleep #2 】I-I'm not scared!!! - [XMv3wQYAStk].srt  20210102 - Video - 【SCUFFED COVER #1】The Bare Necessities - [zfxVA-m8XAk].srt  20210202 - Video - 【 Superliminal 】breaking another game for the 398th time - [DZYx5UQSL6c].srt  20210302 - Video - 【 House 】Can I save anyone？ - [IbySx_pxMyA].srt  20210412 - Video - 【 Welcome to the Tomato Farm 】 - [X13Hgb2MZ-Q].srt  20210417 - Video - 【 Lore (Redebut...？)】The Thief is here to rob you(r heart)! - [UTtpWpQ1ZNc].srt  20210515 - Video - The Final Heist MV - [zq5KzE4gx6I].srt  20240208 - Stream - 【MY RETURN】I'm back everyone【Dokibird】 - [J2YmJL0PX5M].srt  20240210 - Stream - 【MONETIZATION CELEBRATION】also store launch【Dokibird】 - [U2xkLFFoCQE].srt  20240213 - Stream - 【NEOPETS】close your eyes it's 2005 again【Dokibird】 - [A1YCUbQOJB0].srt  20240214 - Stream - 【APEX LEGENDS】Season 20 launch【Dokibird】 - [7vBwiVLb0do].srt  20240216 - Stream - 【APEX LEGENDS RANK】Girl Pred＊ Squad【Dokibird】 - [Q6Q5c7g2xDU].srt  20240216 - Stream - 【BATMAN： ARKHAM ASYLUM】i'm batman【Dokibird】 - [fbk07eALjqs].srt  20240217 - Stream - 【INSIDE THE BACKROOMS】We're great at horror games【Dokibird】 - [DqKQJ3xH3No].srt  20240221 - Stream - 【BATMAN： ARKHAM ASYLUM】The crime rate is still bad【Dokibird】 - [F4xatzDObII].srt  20240225 - Stream - 【BATMAN： ARKHAM ASYLUM】Whoa Batman, Damn【Dokibird】 - [uYtPbVBGGtc].srt  20240226 - Twitch - 【PALWORLD TWITCH RIVALS】Day 1 w⧸ Team @surefour @Shylily @PiaPIUFO 【Dokibird】 - [sCeO79v18u0].srt  (+441 more)
scripts/: _common.py  admin.py  cleanup_audio.py  delete_transcripts.py  download_audio.py  find_multi_line_srt.py  organize_years.py  transcribe_audio.py  upload_transcripts.py  verify_transcript.py  word_fixer.py
(+925 files in other folders)
