[project]
name = "dokiscripts-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.15.7",
    "tqdm>=4.67.3",
    "zstandard>=0.25.0",
]

[tool.uv]
# Refuse to run on older uv that may lack the supply-chain features below.
required-version = ">=0.5.0"
# Never search a fallback index for a package found on the primary one
index-strategy = "first-index"
# Rolling 1-week cooldown: never resolve to a version that was published less than 7 days ago.
exclude-newer = "1 week"
# Floors for sensitive transitives. These only take effect if something pulls
# them in; they cap below-known-bad versions without forcing installation.
constraint-dependencies = [
    "certifi>=2024.7.4",
    "idna>=3.7",
    "pip>=25.0",
    "setuptools>=78.1.1",
    "urllib3>=2.2.3",
    "wheel>=0.45",
]

[tool.ruff]
target-version = "py312"
line-length = 140
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# ignoring E501 disables line length check for ruff since we are using a formatter.
ignore = ["E501"]
# Allow fix for all enabled rules (when `--fix` is provided).
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
